# alpha-factory

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  app.py  database_engine.py  master_daily_cron.py  portfolio_optimizer.py  pyproject.toml  requirements.txt  setup.py
alpha_research_lab/: alpha_mine_ui.py  dp_regret_simulator.py  evaluator.py  init_research_db.py  run_backtest.py
apps/: README.md  __init__.py  _compat.py  broker_monitor.py
cpp_engine/: monte_carlo.cpp  quant_core.cpp  setup.py
departments/: README.md
docs/: README.md  START_HERE.md
models/: vq_encoder_weights.pt
notebooks/: 01_optimal_execution_dp.ipynb  README.md
offline_quant_lab/: 01_build_datalake.py  02_factor_mining.py  03_train_vq_encoder.py  04_train_rl_agent.py
phases/: 1_executive_dashboard.py  2_ai_logbook.py
requirements/: README.md  constraints.txt
runtime/: README.md
scripts/: README.md  approve_paper_order_ticket.py  check_ibkr_adapter_heartbeat.py  check_ibkr_server_readiness.py  check_paper_trading_health.py  check_portfolio_snapshot_health.py  check_public_commit_hygiene.py  import_manual_external_holdings.py  install_macos_ops_dashboard_agent.sh  refresh_manual_external_holdings.py  restart_ops_dashboard_screen.sh  review_paper_trade_proposal.py  run_paper_order_submitter.py  run_paper_snapshot_job.sh  run_paper_strategy_runner.py  run_paper_strategy_runner_job.sh  run_portfolio_snapshot_job.sh  run_qmt_connector_stub.py  start_local_dashboards.sh  start_streamlit_dashboard.sh  sync_server_runtime.sh  update_portfolio_nav.py  (+5 more)
(+1058 files in other folders)
